--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -53,6 +53,11 @@ http {
       server content-repo:80;
     }
 
+    upstream docker-dashboard {
+      server dashboard:443;
+      server dashboard:80;
+    }
+
     upstream docker-game-client {
       server game-client:443;
       server game-client:80;
