--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -27,6 +27,8 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "http-server": "^0.11.1",
+    "lodash.mapvalues": "^4.6.0",
+    "lodash.omit": "^4.5.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-qr-reader": "^2.1.0",
