--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -83,6 +83,10 @@ http {
       server game-challenge-quiz:80;
     }
 
+    upstream docker-game-challenge-boat {
+      server game-challenge-boat:80;
+    }
+
     upstream docker-game-server {
       server game-server:3000;
     }
