--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -49,3 +49,7 @@ services:
   game-challenge-quiz:
     build:
       dockerfile: Dockerfile.production
+
+  game-challenge-boat:
+    build:
+      dockerfile: Dockerfile.production
