--- a/game-challenge/button/package.json
+++ b/game-challenge/button/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "serve": "serve -C -s build -p 3000",
+    "serve": "serve -C -s build -p $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
