--- a/certificate/development/openssl.cnf.template
+++ b/certificate/development/openssl.cnf.template
@@ -9,5 +9,5 @@
   extendedKeyUsage = serverAuth
   subjectAltName = @alt_names
   [alt_names]
-  DNS.1 = *.eppsa.de
-  DNS.2 = eppsa.de
+  DNS.1 = *.local.eppsa.de
+  DNS.2 = *.marco.eppsa.de
