--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "game-challenge/skill/lib/eppsa-ksm-shared"]
 	path = game-challenge/skill/lib/eppsa-ksm-shared
 	url = https://github.com/artcom/eppsa-ksm-shared
+[submodule "game-challenge/sorting/lib/react-dnd-touch-backend"]
+	path = game-challenge/sorting/lib/react-dnd-touch-backend
+	url = https://github.com/artcom/react-dnd-touch-backend.git
