--- a/game-challenge/sorting/package.json
+++ b/game-challenge/sorting/package.json
@@ -33,6 +33,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-autobind": "^1.0.6",
     "react-dev-utils": "^5.0.0",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
