--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -87,6 +87,10 @@ http {
       server game-challenge-boat:80;
     }
 
+    upstream docker-game-challenge-graph {
+      server game-challenge-graph:80;
+    }
+
     upstream docker-game-server {
       server game-server:3000;
     }
