--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -91,6 +91,10 @@ http {
       server game-challenge-graph:80;
     }
 
+    upstream docker-game-challenge-hidden {
+      server game-challenge-hidden:80;
+    }
+
     upstream docker-game-server {
       server game-server:3000;
     }
