--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -95,6 +95,10 @@ http {
       server game-challenge-hidden:80;
     }
 
+    upstream docker-game-challenge-skill {
+      server game-challenge-skill:80;
+    }
+
     upstream docker-game-server {
       server game-server:3000;
     }
