--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,6 +135,12 @@ services:
     environment:
       PORT: 80
 
+  game-challenge-skill:
+    build:
+      context: ./game-challenge/skill
+    environment:
+      PORT: 80
+
   mongo:
     image: "mongo:3.6.3-jessie"
     volumes:
