--- a/game-challenge/quiz/package.json
+++ b/game-challenge/quiz/package.json
@@ -19,7 +19,10 @@
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "6.26.0",
     "eslint": "4.10.0",
     "eslint-config-artcom": "^0.7.0",
@@ -28,9 +31,12 @@
     "eslint-loader": "1.9.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-react": "7.4.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "svg-react-loader": "^0.4.5",
-    "webpack-dev-server": "^3.1.3",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
