--- a/nginx/sites-available/development/cms.eppsa.de.conf
+++ b/nginx/sites-available/development/cms.eppsa.de.conf
@@ -4,7 +4,11 @@ server {
   server_name ~^cms\..+\.eppsa.de$;
 
   location / {
-    proxy_pass http://docker-cms-frontend;
+    limit_except GET {
+    auth_basic            "Restricted Area";
+    auth_basic_user_file  /etc/nginx/.htpasswd;
+
+    proxy_pass            http://docker-cms-frontend;
   }
 
   # Support for webpack-dev-server
