--- a/game-client/package.json
+++ b/game-client/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.4",
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10"
