Fix webpack-dev-server connection

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -76,6 +76,8 @@ services:
     volumes:
       - ./game-challenge/quiz:/app
       - /app/node_modules
+    environment:
+      PORT: 443
 
   game-challenge-boat:
     build:
