--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,6 +80,7 @@ http {
 
     upstream docker-game-challenge-quiz {
       server game-challenge-quiz:80;
+      server game-challenge-quiz:443;
     }
 
     upstream docker-game-challenge-boat {
