--- a/game-challenge/quiz/package.json
+++ b/game-challenge/quiz/package.json
@@ -8,8 +8,9 @@
     "start": "webpack --mode production && http-server ./dist -p $PORT -c 0"
   },
   "dependencies": {
-    "lodash.keys": "^4.2.0",
-    "lodash.pickby": "^4.6.0",
+    "axios": "^0.18.0",
+    "lodash.mapvalues": "^4.6.0",
+    "lodash.omit": "^4.5.0",
     "react": "^16.2.0",
     "react-autobind": "^1.0.6",
     "react-dom": "^16.2.0",
