--- a/game-challenge/button/package.json
+++ b/game-challenge/button/package.json
@@ -7,8 +7,9 @@
     "eslint-config-artcom": "^0.7.0",
     "eslint-config-artcom-react": "^0.5.1",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "lodash.keys": "^4.2.0",
+    "lodash.pickby": "^4.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-qr-reader": "^2.1.0",
