--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,8 +84,8 @@ http {
       server game-challenge-quiz:443;
     }
 
-    upstream docker-game-challenge-boat {
-      server game-challenge-boat:80;
+    upstream docker-game-challenge-clicker {
+      server game-challenge-clicker:80;
     }
 
     upstream docker-game-challenge-graph {
