--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -50,6 +50,6 @@ services:
     build:
       dockerfile: Dockerfile.production
 
-  game-challenge-boat:
+  game-challenge-clicker:
     build:
       dockerfile: Dockerfile.production
