--- a/nginx/sites-available/production/boat.eppsa.de.conf
+++ b/nginx/sites-available/production/boat.eppsa.de.conf
@@ -1,10 +1,10 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name "~^boat\..+\.eppsa.de$";
+  server_name "~^clicker\..+\.eppsa.de$";
 
   location / {
-    proxy_pass http://docker-game-challenge-boat/;
+    proxy_pass http://docker-game-challenge-clicker/;
   }
 
 }
