--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,9 @@
 [submodule "game-client/lib/eppsa-ksm-shared"]
 	path = game-client/lib/eppsa-ksm-shared
 	url = https://github.com/artcom/eppsa-ksm-shared
+[submodule "game-challenge/sorting/lib/eppsa-ksm-shared"]
+	path = game-challenge/sorting/lib/eppsa-ksm-shared
+	url = https://github.com/artcom/eppsa-ksm-shared.git
 [submodule "game-challenge/button/lib/eppsa-ksm-shared"]
 	path = game-challenge/button/lib/eppsa-ksm-shared
 	url = https://github.com/artcom/eppsa-ksm-shared
