--- a/game-challenge/sorting/Dockerfile.development
+++ b/game-challenge/sorting/Dockerfile.development
@@ -5,6 +5,7 @@ RUN mkdir /app
 WORKDIR /app
 
 # install and cache app dependencies
+COPY lib /app/lib
 COPY package.json /app/package.json
 COPY package-lock.json /app/package-lock.json
 RUN npm install
