--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -76,6 +76,7 @@ http {
     upstream docker-game-challenge-sorting {
       server game-challenge-sorting:443;
       server game-challenge-sorting:80;
+      server game-challenge-sorting:443;
     }
 
     upstream docker-game-challenge-clicker {
