--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,7 +103,11 @@ services:
     build:
       context: ./game-challenge/sorting
     environment:
-      PORT: 80
+      PORT: 443
+      ASSET_SERVER_URI: https://asset-server.${HOST}
+      CONTENT_SERVER_URI: https://content-server.${HOST}
+      GAME_SERVER_URI: https://game-server.${HOST}
+      STATIC_SERVER_URI: https://static.${HOST}
 
   game-challenge-quiz:
     build:
