--- a/game-client/package.json
+++ b/game-client/package.json
@@ -41,6 +41,7 @@
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.4",
     "styled-components": "^3.2.5",
+    "svg-react-loader": "^0.4.5",
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10"
   },
