--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -53,3 +53,15 @@ services:
   game-challenge-clicker:
     build:
       dockerfile: Dockerfile.production
+
+  game-challenge-graph:
+    build:
+      dockerfile: Dockerfile.production
+
+  game-challenge-hidden:
+    build:
+      dockerfile: Dockerfile.production
+
+  game-challenge-skill:
+    build:
+      dockerfile: Dockerfile.production
