--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -76,7 +76,6 @@ http {
     upstream docker-game-challenge-sorting {
       server game-challenge-sorting:443;
       server game-challenge-sorting:80;
-      server game-challenge-sorting:443;
     }
 
     upstream docker-game-challenge-clicker {
@@ -85,6 +84,7 @@ http {
     }
 
     upstream docker-game-challenge-graph {
+      server game-challenge-hidden:443;
       server game-challenge-graph:80;
     }
 
