--- a/game-client/package.json
+++ b/game-client/package.json
@@ -11,7 +11,7 @@
     "node": "9.7.1"
   },
   "dependencies": {
-    "ajv": "^6.4.0",
+    "ajv": "^5.5.2",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -37,12 +37,13 @@
     "react-dom": "^16.2.0",
     "react-qr-reader": "^2.1.0",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.1.0",
     "styled-components": "^3.2.5",
     "svg-react-loader": "^0.4.5",
+    "uuid": "^3.2.1",
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10"
   },
