--- a/game-challenge/quiz/Dockerfile.development
+++ b/game-challenge/quiz/Dockerfile.development
@@ -4,5 +4,11 @@ FROM node:9.9.0
 RUN mkdir /app
 WORKDIR /app
 
+# install and cache app dependencies
+COPY package.json /app/package.json
+COPY package-lock.json /app/package-lock.json
+COPY lib /app/lib
+RUN npm install
+
 # start app
 CMD ["npm", "run", "watch"]
