--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "game-client/lib/eppsa-ksm-shared"]
 	path = game-client/lib/eppsa-ksm-shared
 	url = https://github.com/artcom/eppsa-ksm-shared
+[submodule "game-challenge/button/lib/eppsa-ksm-shared"]
+	path = game-challenge/button/lib/eppsa-ksm-shared
+	url = git@github.com:artcom/eppsa-ksm-shared.git
