--- a/game-challenge/button/Dockerfile.production
+++ b/game-challenge/button/Dockerfile.production
@@ -7,6 +7,7 @@ WORKDIR /app
 # install and cache app dependencies
 COPY package.json /app/package.json
 COPY package-lock.json /app/package-lock.json
+COPY lib /app/lib
 RUN npm install
 
 COPY src /app/src
