--- a/game-challenge/button/package.json
+++ b/game-challenge/button/package.json
@@ -16,6 +16,7 @@
     "react-qr-reader": "^2.1.0",
     "react-scripts": "1.1.1",
     "serve": "^6.5.3",
+    "socket.io-client": "^2.1.0",
     "styled-components": "^3.2.2"
   },
   "scripts": {
