--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/artcom/eppsa-ksm-shared
 [submodule "game-challenge/button/lib/eppsa-ksm-shared"]
 	path = game-challenge/button/lib/eppsa-ksm-shared
-	url = git@github.com:artcom/eppsa-ksm-shared.git
+	url = https://github.com/artcom/eppsa-ksm-shared
