--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -64,6 +64,7 @@ http {
     }
 
     upstream docker-game-challenge-button {
+      server game-challenge-button:443;
       server game-challenge-button:80;
     }
 
