--- a/nginx/sites-available/development/button.eppsa.de.conf
+++ b/nginx/sites-available/development/button.eppsa.de.conf
@@ -17,11 +17,10 @@ server {
   }
 
   location /socket.io/ {
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
 
-      proxy_pass http://docker-game-challenge-button;
-    }
-
+    proxy_pass http://docker-game-server;
+  }
 }
