--- a/game-challenge/button/package.json
+++ b/game-challenge/button/package.json
@@ -1,29 +1,37 @@
 {
   "name": "button",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "lint": "eslint src",
+    "watch": "webpack-dev-server --mode development --port $PORT",
+    "start": "webpack --mode production && http-server ./dist -p $PORT -c 0"
+  },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "eppsa-ksm-shared": "file:./lib/eppsa-ksm-shared",
     "eslint": "^4.18.2",
     "eslint-config-artcom": "^0.7.0",
     "eslint-config-artcom-react": "^0.5.1",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
-    "lodash.keys": "^4.2.0",
-    "lodash.pickby": "^4.6.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-qr-reader": "^2.1.0",
-    "react-scripts": "1.1.1",
-    "serve": "^6.5.3",
     "socket.io-client": "^2.1.0",
-    "styled-components": "^3.2.2"
+    "styled-components": "^3.2.2",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "serve": "serve -C -s build -p $PORT",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "webpack-dev-server": "^3.1.3"
   }
 }
