- switched graph game from http-server to webpack-dev-server because of process.env - communication with game-client now via bootstrap.js in eppsa-ksm-shared

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "game-challenge/button/lib/eppsa-ksm-shared"]
 	path = game-challenge/button/lib/eppsa-ksm-shared
 	url = https://github.com/artcom/eppsa-ksm-shared
+[submodule "game-challenge/graph/lib/eppsa-ksm-shared"]
+	path = game-challenge/graph/lib/eppsa-ksm-shared
+	url = https://github.com/artcom/eppsa-ksm-shared
