--- a/nginx/sites-available/development/graph.eppsa.de.conf
+++ b/nginx/sites-available/development/graph.eppsa.de.conf
@@ -7,4 +7,13 @@ server {
     proxy_pass http://docker-game-challenge-graph/;
   }
 
+  # Support for webpack-dev-server
+  location /sockjs-node {
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
+    proxy_pass http://docker-game-challenge-graph;
+  }
+
 }
