--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,10 @@ services:
       context: ./game-challenge/graph
     environment:
       PORT: 80
+      ASSET_SERVER_URI: https://asset-server.${HOST}
+      CONTENT_SERVER_URI: https://content-server.${HOST}
+      GAME_SERVER_URI: https://game-server.${HOST}
+      STATIC_SERVER_URI: https://static.${HOST}
 
   game-challenge-hidden:
     build:
