--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "game-challenge/graph/lib/eppsa-ksm-shared"]
 	path = game-challenge/graph/lib/eppsa-ksm-shared
 	url = https://github.com/artcom/eppsa-ksm-shared
+[submodule "game-challenge/hidden/lib/eppsa-ksm-shared"]
+	path = game-challenge/hidden/lib/eppsa-ksm-shared
+	url = https://github.com/artcom/eppsa-ksm-shared
