--- a/game-challenge/skill/package.json
+++ b/game-challenge/skill/package.json
@@ -1,12 +1,21 @@
 {
   "name": "skill",
   "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "watch": "node ./src/server.js",
-    "start": "node ./src/server.js"
+    "watch": "webpack-dev-server --mode development --port $PORT",
+    "start": "webpack --mode production && http-server ./dist -p $PORT -c 0"
   },
   "dependencies": {
+    "eppsa-ksm-shared": "file:lib/eppsa-ksm-shared",
     "express": "^4.16.3",
     "socket.io": "^2.1.0"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "socket.io-client": "^2.1.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
