--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -98,6 +98,7 @@ http {
     }
 
     upstream docker-game-challenge-skill {
+      server game-challenge-skill:443;
       server game-challenge-skill:80;
     }
 
