test push with new configs

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -94,6 +94,7 @@ http {
     }
 
     upstream docker-game-challenge-hidden {
+      server game-challenge-hidden:443;
       server game-challenge-hidden:80;
     }
 
