--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "game-challenge/hidden/lib/eppsa-ksm-shared"]
 	path = game-challenge/hidden/lib/eppsa-ksm-shared
 	url = https://github.com/artcom/eppsa-ksm-shared
+[submodule "game-challenge/clicker/lib/eppsa-ksm-shared"]
+	path = game-challenge/clicker/lib/eppsa-ksm-shared
+	url = https://github.com/artcom/eppsa-ksm-shared
