--- a/game-challenge/clicker/Dockerfile.development
+++ b/game-challenge/clicker/Dockerfile.development
@@ -1,4 +1,4 @@
-FROM node:9.7.1
+FROM node:9.9.0
 
 # set working directory
 RUN mkdir /app
@@ -7,6 +7,7 @@ WORKDIR /app
 # install and cache app dependencies
 COPY package.json /app/package.json
 COPY package-lock.json /app/package-lock.json
+COPY lib /app/lib
 RUN npm install
 
 # start app
