--- a/game-challenge/clicker/package.json
+++ b/game-challenge/clicker/package.json
@@ -2,10 +2,17 @@
   "name": "clicker",
   "version": "0.1.0",
   "scripts": {
-    "watch": "http-server src/ -p $PORT",
-    "start": "http-server src/ -p $PORT -c 0"
+    "watch": "webpack-dev-server --mode development --port $PORT",
+    "start": "webpack --mode production && http-server ./dist -p $PORT -c 0"
   },
   "dependencies": {
+    "eppsa-ksm-shared": "file:lib/eppsa-ksm-shared",
     "http-server": "^0.11.1"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   }
 }
