converted clicker game to webpack

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -86,6 +86,7 @@ http {
     }
 
     upstream docker-game-challenge-clicker {
+      server game-challenge-clicker:443;
       server game-challenge-clicker:80;
     }
 
