--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,7 +129,11 @@ services:
     build:
       context: ./game-challenge/clicker
     environment:
-      PORT: 80
+      PORT: 443
+      ASSET_SERVER_URI: https://asset-server.${HOST}
+      CONTENT_SERVER_URI: https://content-server.${HOST}
+      GAME_SERVER_URI: https://game-server.${HOST}
+      STATIC_SERVER_URI: https://static.${HOST}
 
   game-challenge-graph:
     build:
