--- a/game-challenge/button/package.json
+++ b/game-challenge/button/package.json
@@ -30,6 +30,7 @@
     "serve": "^6.5.5",
     "socket.io-client": "^2.1.0",
     "styled-components": "^3.2.6",
+    "svg-react-loader": "^0.4.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
   },
