--- a/game-challenge/hidden/Dockerfile.production
+++ b/game-challenge/hidden/Dockerfile.production
@@ -11,6 +11,7 @@ COPY lib /app/lib
 RUN npm install
 
 COPY src /app/src
+COPY webpack.config.js /app/webpack.config.js
 
 # start app
 CMD ["npm", "start"]
