--- a/game-challenge/skill/package.json
+++ b/game-challenge/skill/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "eppsa-ksm-shared": "file:lib/eppsa-ksm-shared",
     "express": "^4.16.3",
+    "http-server": "^0.11.1",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
