--- a/game-challenge/clicker/package.json
+++ b/game-challenge/clicker/package.json
@@ -7,10 +7,18 @@
   },
   "dependencies": {
     "eppsa-ksm-shared": "file:lib/eppsa-ksm-shared",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "svg-react-loader": "^0.4.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3"
