--- a/game-challenge/clicker/package.json
+++ b/game-challenge/clicker/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clicker",
   "version": "0.1.0",
+  "private": true,
   "scripts": {
     "watch": "webpack-dev-server --mode development --port $PORT",
     "start": "webpack --mode production && http-server ./dist -p $PORT -c 0"
