--- a/game-client/package.json
+++ b/game-client/package.json
@@ -30,6 +30,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.mapvalues": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "querystring": "^0.2.0",
