--- a/game-challenge/skill/package.json
+++ b/game-challenge/skill/package.json
@@ -8,13 +8,20 @@
   },
   "dependencies": {
     "eppsa-ksm-shared": "file:lib/eppsa-ksm-shared",
-    "express": "^4.16.3",
     "http-server": "^0.11.1",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
     "socket.io-client": "^2.1.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "html-loader": "^0.5.5",
+    "svg-react-loader": "^0.4.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
