--- a/game-challenge/quiz/.babelrc
+++ b/game-challenge/quiz/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": [["env", { "modules": false }], "react"],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": ["babel-plugin-styled-components", "transform-object-rest-spread"]
 }
