Adapt server_name regex to top domain

--- a/nginx/sites-available/development/cms.eppsa.de.conf
+++ b/nginx/sites-available/development/cms.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name ~^cms\..+\.eppsa.de$;
+  server_name ~^cms\.(.+\.|)eppsa.de$;
 
   location / {
     proxy_pass http://docker-cms-frontend;
