--- a/nginx/sites-available/development/game-server.eppsa.de.conf
+++ b/nginx/sites-available/development/game-server.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name ~^game-server\..+\.eppsa.de$;
+  server_name ~^game-server\.(.+\.|)eppsa.de$;
 
   location / {
     proxy_http_version 1.1;
