--- a/nginx/sites-available/development/content-server.eppsa.de.conf
+++ b/nginx/sites-available/development/content-server.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name ~^content-server\..+\.eppsa.de$;
+  server_name ~^content-server\.(.+\.|)eppsa.de$;
 
   location / {
     proxy_pass http://docker-content-server;
