--- a/nginx/sites-available/development/dashboard.eppsa.de.conf
+++ b/nginx/sites-available/development/dashboard.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name ~^dashboard\..+\.eppsa.de$;
+  server_name ~^dashboard\.(.+\.|)eppsa.de$;
 
   location / {
     proxy_pass http://docker-dashboard/;
