--- a/nginx/sites-available/development/hidden.eppsa.de.conf
+++ b/nginx/sites-available/development/hidden.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name "~^hidden\..+\.eppsa.de$";
+  server_name "~^hidden\.(.+\.|)eppsa.de$";
 
   location / {
     proxy_pass http://docker-game-challenge-hidden/;
