--- a/nginx/sites-available/production/button.eppsa.de.conf
+++ b/nginx/sites-available/production/button.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name ~^button\..+\.eppsa.de$;
+  server_name ~^button\.(.+\.|)eppsa.de$;
 
   location / {
     proxy_pass http://docker-game-challenge-button/;
