--- a/nginx/sites-available/production/game.eppsa.de.conf
+++ b/nginx/sites-available/production/game.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name ~^game\..+\.eppsa.de$;
+  server_name ~^(game|bretter)\.(.+\.|)eppsa.de$;
 
   location / {
     proxy_pass http://docker-game-client/;
