--- a/nginx/sites-available/production/graph.eppsa.de.conf
+++ b/nginx/sites-available/production/graph.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name "~^graph\..+\.eppsa.de$";
+  server_name "~^graph\.(.+\.|)eppsa.de$";
 
   location / {
     proxy_pass http://docker-game-challenge-graph/;
