--- a/nginx/sites-available/production/skill.eppsa.de.conf
+++ b/nginx/sites-available/production/skill.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name "~^skill\..+\.eppsa.de$";
+  server_name "~^skill\.(.+\.|)eppsa.de$";
 
   location / {
     proxy_pass http://docker-game-challenge-skill/;
