--- a/game-challenge/sorting/package.json
+++ b/game-challenge/sorting/package.json
@@ -11,6 +11,7 @@
     "eppsa-ksm-shared": "file:./lib/eppsa-ksm-shared",
     "lodash.mapvalues": "^4.6.0",
     "lodash.pickby": "^4.6.0",
+    "lodash.omit": "^4.5.0",
     "react": "^16.2.0",
     "react-autobind": "^1.0.6",
     "react-dnd": "^2.6.0",
