--- a/game-challenge/quiz/package.json
+++ b/game-challenge/quiz/package.json
@@ -12,6 +12,7 @@
     "eppsa-ksm-shared": "file:./lib/eppsa-ksm-shared",
     "lodash.mapvalues": "^4.6.0",
     "lodash.omit": "^4.5.0",
+    "lodash.shuffle": "^4.2.0",
     "react": "^16.2.0",
     "react-autobind": "^1.0.6",
     "react-dom": "^16.2.0",
