--- a/game-challenge/sorting/package.json
+++ b/game-challenge/sorting/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "eppsa-ksm-shared": "file:./lib/eppsa-ksm-shared",
     "lodash.mapvalues": "^4.6.0",
+    "lodash.orderby": "^4.6.0",
     "lodash.pickby": "^4.6.0",
     "react": "^16.2.0",
     "react-autobind": "^1.0.6",
