--- a/nginx/sites-available/development/sorting.eppsa.de.conf
+++ b/nginx/sites-available/development/sorting.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name ~^sorting\..+\.eppsa.de$;
+  server_name "~^sorting\.(.+\.|)eppsa.de$";
 
   location / {
     proxy_pass http://docker-game-challenge-sorting/;
