fixed graph in nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,7 +84,7 @@ http {
     }
 
     upstream docker-game-challenge-graph {
-      server game-challenge-hidden:443;
+      server game-challenge-graph:443;
       server game-challenge-graph:80;
     }
 
