Add ksm-shared to dashboard

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,4 +34,6 @@
 [submodule "game-challenge/sorting/lib/react-dnd-touch-backend"]
 	path = game-challenge/sorting/lib/react-dnd-touch-backend
 	url = https://github.com/artcom/react-dnd-touch-backend.git
-	
+[submodule "dashboard/lib/eppsa-ksm-shared"]
+	path = dashboard/lib/eppsa-ksm-shared
+	url = https://github.com/artcom/eppsa-ksm-shared
