--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,34 +12,36 @@
     "node": "9.7.1"
   },
   "dependencies": {
-    "ajv": "^6.2.1",
+    "ajv": "^6.5.0",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-config-artcom": "^0.7.0",
     "eslint-config-artcom-react": "^0.5.1",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-react": "^7.8.2",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "lodash.mapvalues": "^4.6.0",
     "lodash.omit": "^4.5.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "eppsa-ksm-shared": "file:./lib/eppsa-ksm-shared",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "socket.io-client": "^2.0.4",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10"
+    "socket.io-client": "^2.1.0",
+    "styled-components": "^3.2.6",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.4"
   }
 }
