--- a/game-challenge/sorting/package.json
+++ b/game-challenge/sorting/package.json
@@ -18,6 +18,7 @@
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.2.0",
+    "react-flip-move": "^3.0.1",
     "styled-components": "^3.2.3"
   },
   "devDependencies": {
