--- a/mongo-access/package.json
+++ b/mongo-access/package.json
@@ -10,5 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-artcom": "^0.7.0",
+    "eslint-plugin-import": "^2.11.0",
+    "mongodb": "^3.0.7",
+    "socket.io": "^2.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.4",
+    "socket.io-client": "^2.1.0"
   }
 }
