--- a/mongo-access/package.json
+++ b/mongo-access/package.json
@@ -13,6 +13,7 @@
     "eslint": "^4.19.1",
     "eslint-config-artcom": "^0.7.0",
     "eslint-plugin-import": "^2.11.0",
+    "express": "^4.16.3",
     "mongodb": "^3.0.7",
     "socket.io": "^2.1.0"
   },
