--- a/nginx/sites-available/production/clicker.eppsa.de.conf
+++ b/nginx/sites-available/production/clicker.eppsa.de.conf
@@ -1,10 +1,15 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
-
+  
   server_name "~^clicker\.(.+\.|)eppsa.de$";
+  listen 443 ssl;
+  ssl on;
+
+  root /clicker;
 
   location / {
-    proxy_pass http://docker-game-challenge-clicker/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
 
 }
