--- a/nginx/sites-available/production/graph.eppsa.de.conf
+++ b/nginx/sites-available/production/graph.eppsa.de.conf
@@ -1,10 +1,14 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
-
+  
   server_name "~^graph\.(.+\.|)eppsa.de$";
+  listen 443 ssl;
+  ssl on;
+
+  root /graph;
 
   location / {
-    proxy_pass http://docker-game-challenge-graph/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
-
 }
