--- a/nginx/sites-available/production/skill.eppsa.de.conf
+++ b/nginx/sites-available/production/skill.eppsa.de.conf
@@ -1,10 +1,15 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
-
+  
   server_name "~^skill\.(.+\.|)eppsa.de$";
+  listen 443 ssl;
+  ssl on;
+
+  root /skill;
 
   location / {
-    proxy_pass http://docker-game-challenge-skill/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
 
   location /socket.io/ {
