--- a/nginx/sites-available/production/button.eppsa.de.conf
+++ b/nginx/sites-available/production/button.eppsa.de.conf
@@ -1,10 +1,15 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
-
+  
   server_name ~^button\.(.+\.|)eppsa.de$;
 
-  location / {
-    proxy_pass http://docker-game-challenge-button/;
+  listen 443 ssl;
+  ssl on;
+
+  root /button;
+
+  location ~ \.(ttf)$ {
+      add_header Access-Control-Allow-Origin *;
   }
 
   location /socket.io/ {
