--- a/nginx/sites-available/production/game.eppsa.de.conf
+++ b/nginx/sites-available/production/game.eppsa.de.conf
@@ -1,10 +1,15 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
-
+  
   server_name ~^(game|bretter)\.(.+\.|)eppsa.de$;
+  listen 443 ssl;
+  ssl on;
+
+  root /client;
 
   location / {
-    proxy_pass http://docker-game-client/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
 
   location /socket.io/ {
