--- a/nginx/sites-available/production/quiz.eppsa.de.conf
+++ b/nginx/sites-available/production/quiz.eppsa.de.conf
@@ -2,9 +2,13 @@ server {
   include /etc/nginx/config/eppsa.de.conf;
 
   server_name "~^quiz\.(.+\.|)eppsa.de$";
+  listen 443 ssl;
+  ssl on;
+
+  root /quiz;
 
   location / {
-    proxy_pass http://docker-game-challenge-quiz/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
-
 }
