--- a/nginx/sites-available/production/sorting.eppsa.de.conf
+++ b/nginx/sites-available/production/sorting.eppsa.de.conf
@@ -1,9 +1,14 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
-
+  
   server_name "~^sorting\.(.+\.|)eppsa.de$";
+  listen 443 ssl;
+  ssl on;
+
+  root /sorting;
 
   location / {
-    proxy_pass http://docker-game-challenge-sorting/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
 }
