Fix production build and deployment

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -5,6 +5,8 @@ services:
     build:
       args:
         environment: development
+    depends_on:
+      - game-client
 
   cms-frontend:
     build:
