--- a/game-challenge/skill/package.json
+++ b/game-challenge/skill/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "watch": "webpack-dev-server --mode development --port $PORT",
-    "start": "webpack --mode production && http-server ./dist -p $PORT -c 0"
+    "start": "webpack --mode production && http-server ./dist -p $PORT -c 0",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "eppsa-ksm-shared": "file:lib/eppsa-ksm-shared",
