--- a/nginx/sites-available/production/button.eppsa.de.conf
+++ b/nginx/sites-available/production/button.eppsa.de.conf
@@ -1,23 +1,13 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
-  
-  server_name ~^button\.(.+\.|)eppsa.de$;
 
-  listen 443 ssl;
-  ssl on;
+  server_name ~^button\.(.+\.|)eppsa.de$;
 
   root /button;
 
-  location ~ \.(ttf)$ {
-      add_header Access-Control-Allow-Origin *;
-  }
-
-  location /socket.io/ {
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-
-      proxy_pass http://docker-game-challenge-button;
+  location / {
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
 
 }
