--- a/nginx/sites-available/production/content-server.eppsa.de.conf
+++ b/nginx/sites-available/production/content-server.eppsa.de.conf
@@ -1,5 +1,5 @@
 server {
-  include /etc/nginx/config/eppsa.de.conf;
+  include /etc/nginx/config/ssl.conf;
 
   server_name ~^content-server\.(.+\.|)eppsa.de$;
 
