--- a/nginx/sites-available/production/dashboard.eppsa.de.conf
+++ b/nginx/sites-available/production/dashboard.eppsa.de.conf
@@ -1,9 +1,12 @@
 server {
-  include /etc/nginx/config/eppsa.de.conf;
+  include /etc/nginx/config/ssl.conf;
 
   server_name ~^dashboard\.(.+\.|)eppsa.de$;
 
+  root /dashboard;
+
   location / {
-    proxy_pass http://docker-dashboard/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
 }
