--- a/nginx/sites-available/static.eppsa.de.conf
+++ b/nginx/sites-available/static.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
+  include /etc/nginx/config/ssl.conf;
+
   server_name ~^static\.(.+\.|)eppsa.de$;
-  listen 443 ssl;
-  ssl on;
 
   root /html;
   autoindex on;
