Adapt npm start scripts

--- a/game-challenge/graph/package.json
+++ b/game-challenge/graph/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "watch": "webpack-dev-server --mode development --port $PORT",
-    "start": "webpack --mode production && http-server ./dist -p $PORT -c 0",
+    "start": "http-server ./dist -p $PORT -c 0",
     "build": "webpack --mode production"
   },
   "dependencies": {
