--- a/game-challenge/hidden/package.json
+++ b/game-challenge/hidden/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "watch": "webpack-dev-server --mode development --port $PORT",
-    "start": "webpack --mode production && http-server ./dist -p $PORT -c 0",
+    "start": "http-server ./dist -p $PORT -c 0",
     "build": "webpack --mode production"
   },
   "dependencies": {
