Fix another rebase issue

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -58,6 +58,7 @@ services:
       CONTENT_SERVER_URI: https://content-server.${HOST}
       ASSET_SERVER_URI: https://asset-server.${HOST}
       GAME_SERVER_URI: https://game-server.${HOST}
+      STATIC_SERVER_URI: https://static.${HOST}
       FONT_URI: https://static.${HOST}/fonts
       PORT: 443
     volumes:
