--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -41,6 +41,7 @@
     "socket.io-client": "^2.1.0",
     "styled-components": "^3.2.6",
     "styled-transition-group": "^1.0.0",
+    "svg-react-loader": "^0.4.5",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   },
