--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -7,6 +7,7 @@ services:
         environment: development
     depends_on:
       - game-client
+      - game-stats
 
   cms-frontend:
     build:
@@ -85,6 +86,17 @@ services:
         dockerfile: Dockerfile.development
       volumes:
         - ./mongo-access:/app
+        - /app/node_modules
+
+  game-stats:
+      build:
+        context: ./game-stats
+        dockerfile: Dockerfile.development
+      environment:
+        PORT: 443
+        MONGO_ACCESS_URI: https://mongo.${HOST}
+      volumes:
+        - ./game-stats:/app
         - /app/node_modules
 
   game-challenge-button:
