--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -102,6 +102,11 @@ http {
       server game-server:3000;
     }
 
+    upstream docker-game-stats {
+      server game-stats:443;
+      server game-stats:80;
+    }
+
     upstream docker-mongo-access {
       server mongo-access:3000;
     }
