--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -31,3 +31,7 @@ services:
   game-server:
     build:
       dockerfile: Dockerfile.production
+
+  mongo-access:
+    build:
+      dockerfile: Dockerfile.production
