--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - content-repo
       - cms-frontend
       - game-server
+      - mongo-access
     ports:
       - "80:80"
       - "443:443"
@@ -63,6 +64,14 @@ services:
       - type: volume
         source: mongoDB
         target: /data/db
+
+  mongo-access:
+      build:
+        context: ./mongo-access
+      environment:
+        MONGODB_URI: mongodb://mongo
+      depends_on:
+        - mongo
 
 volumes:
   content:
