added astragal challenge

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -98,6 +98,11 @@ http {
       server game-challenge-skill:80;
     }
 
+    upstream docker-game-challenge-astragal {
+      server game-challenge-astragal:443;
+      server game-challenge-astragal:80;
+    }
+
     upstream docker-game-server {
       server game-server:3000;
     }
