added eppsa-ksm-shared as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,6 @@
 	path = game-challenge/sorting/lib/react-dnd-touch-backend
 	url = https://github.com/artcom/react-dnd-touch-backend.git
 	
+[submodule "game-challenge/astragal/lib/eppsa-ksm-shared"]
+	path = game-challenge/astragal/lib/eppsa-ksm-shared
+	url = https://github.com/artcom/eppsa-ksm-shared.git
