--- a/nginx/sites-available/development/cms.eppsa.de.conf
+++ b/nginx/sites-available/development/cms.eppsa.de.conf
@@ -1,12 +1,19 @@
 server {
   include /etc/nginx/config/ssl.conf;
+  include /etc/nginx/config/proxy.conf;
 
   server_name ~^cms\.(.+\.|)eppsa.de$;
 
-  root /cms-frontend;
-
   location / {
-    index index.html;
-    add_header Access-Control-Allow-Origin *;
+    proxy_pass http://docker-cms-frontend;
+  }
+
+  # Support for webpack-dev-server
+  location /sockjs-node {
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
+    proxy_pass http://docker-cms-frontend;
   }
 }
