--- a/game-server/Dockerfile.development
+++ b/game-server/Dockerfile.development
@@ -6,6 +6,7 @@ WORKDIR /app
 
 # install and cache app dependencies
 COPY package.json /app/package.json
+COPY package-lock.json /app/package-lock.json
 RUN npm install
 
 # start app
