--- a/nginx/sites-available/development/asset-server.eppsa.de.conf
+++ b/nginx/sites-available/development/asset-server.eppsa.de.conf
@@ -1,5 +1,6 @@
 server {
   include /etc/nginx/config/ssl.conf;
+  include /etc/nginx/config/proxy.conf;
 
   server_name ~^asset-server\.(.+\.|)eppsa.de$;
 
