--- a/nginx/sites-available/development/button.eppsa.de.conf
+++ b/nginx/sites-available/development/button.eppsa.de.conf
@@ -2,10 +2,10 @@ server {
   include /etc/nginx/config/ssl.conf;
   include /etc/nginx/config/proxy.conf;
 
-  server_name ~^dashboard\.(.+\.|)eppsa.de$;
+  server_name ~^button\.(.+\.|)eppsa.de$;
 
   location / {
-    proxy_pass http://docker-dashboard/;
+    proxy_pass http://docker-game-challenge-button/;
   }
 
   # Support for webpack-dev-server
@@ -14,15 +14,14 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
 
-    proxy_pass http://docker-dashboard;
+    proxy_pass http://docker-game-challenge-button;
   }
 
   location /socket.io/ {
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
 
-      proxy_pass http://docker-dashboard;
-    }
-
+    proxy_pass http://docker-game-server;
+  }
 }
