--- a/nginx/sites-available/development/skill.eppsa.de.conf
+++ b/nginx/sites-available/development/skill.eppsa.de.conf
@@ -1,12 +1,18 @@
 server {
   include /etc/nginx/config/ssl.conf;
+  include /etc/nginx/config/proxy.conf;
 
   server_name "~^skill\.(.+\.|)eppsa.de$";
 
-  root /skill;
-
   location / {
-    index index.html;
-    add_header Access-Control-Allow-Origin *;
+    proxy_pass http://docker-game-challenge-skill/;
   }
+
+  location /socket.io/ {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+
+      proxy_pass http://docker-game-server;
+    }
 }
