Fix astragal nginx route

--- a/nginx/sites-available/production/astragal.eppsa.de.conf
+++ b/nginx/sites-available/production/astragal.eppsa.de.conf
@@ -3,7 +3,7 @@ server {
 
   server_name "~^astragal\.(.+\.|)eppsa.de$";
 
-  root /graph;
+  root /astragal;
 
   location / {
     index index.html;
