--- a/game-server/Dockerfile.development
+++ b/game-server/Dockerfile.development
@@ -10,4 +10,4 @@ COPY package-lock.json /app/package-lock.json
 RUN npm install
 
 # start app
-CMD ["npm", "run", "watch"]
+CMD ["npm", "run", "debug"]
