--- a/game-server/package.json
+++ b/game-server/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint src",
-    "debug": "node --inspect-brk ./src/index.js",
+    "debug": "node --inspect-brk=0.0.0.0:9229 ./src/index.js",
     "start": "node ./src/index.js",
     "watch": "nodemon -L ./src/index.js"
   },
