Update hosting config
Update hosting config


Update hosting config


Update hosting config

--- a/eppsa-de-wifi-instructions/nginx.conf
+++ b/eppsa-de-wifi-instructions/nginx.conf
@@ -1,35 +1,37 @@
-user www-data;
-worker_processes  1;
+server {
+  listen 443 ssl;
+  root /var/www/html/eppsa.de;
+  index index.html;
+  server_name bretter.eppsa.de;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+  ssl on;
 
-events {
-    worker_connections  1024;
+  ssl_certificate           /home/dev/letsencrypt/live/eppsa.de/fullchain.pem;
+  ssl_certificate_key       /home/dev/letsencrypt/live/eppsa.de/privkey.pem;
+
+  ssl_session_cache   shared:SSL:10m;
+  ssl_session_timeout 10m;
+
+  ssl_prefer_server_ciphers on;
+
+  # kill cache
+  add_header Last-Modified $date_gmt;
+  add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+  if_modified_since off;
+  expires off;
+  etag off;
+
+  location / {
+      try_files $uri $uri/ =404;
+  }
 }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    #gzip  on;
-
-    ssl_certificate           /certificate/live/eppsa.de/fullchain.pem;
-    ssl_certificate_key       /certificate/live/eppsa.de/privkey.pem;
-
-    ssl_session_cache   shared:SSL:10m;
-    ssl_session_timeout 10m;
-
-    ssl_prefer_server_ciphers on;
-    add_header Strict-Transport-Security max-age=15768000;
-
-    client_max_body_size 0;
-
-    include /etc/nginx/conf.d/*.conf;
+server {
+  listen 80 default_server;
+  root /var/www/html/eppsa.de;
+  index index.html;
+  server_name _;
+  location / {
+    return 301 https://$host$request_uri;
+  }
 }
